@@ -10,6 +10,7 @@ Version 0.3q
 * New patreon sponsored content by Jo Rhade:
  - Equines win, ride stallion (requires pussy)
 * You can no longer become pregnant from lizard tails.
+* Fuckhuge terry pitch vaginal scene done. Like, huge.
 
 --------------------------------------------
              PREVIOUS VERSIONS
